--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Oracle Integration Cloud
+email: lloyd.e.williams@oracle.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site provides a variety of Oracle Integration Cloud Tutorials that you can use to learn how to build integrations with Oracle Integation Cloud (OIC).
+  You can learn more about Oracle Integration Cloud at: https://cloud.oracle.com/en_US/oic
 baseurl: "/IC" # the subpath of your site, e.g. /blog
 url: "https://lloyd-e-williams.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
