--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   You can learn more about Oracle Integration Cloud at: https://cloud.oracle.com/en_US/oic
 baseurl: "/IC" # the subpath of your site, e.g. /blog
 url: "https://lloyd-e-williams.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 # Build settings
 markdown: kramdown
